--- a/styles/Wheel.module.css
+++ b/styles/Wheel.module.css
@@ -22,6 +22,13 @@
   margin: 0 auto;
 }
 
+
+.rightPanel {
+  width: 100%;
+  max-width: 300px;
+}
+
+
 .leftPanel {
   background-color: #ffffff;
   padding: 20px;
@@ -169,4 +176,7 @@
   .wheelContainer {
     margin: 0;
   }
-}
+
+  .rightPanel {
+    margin-left: 20px;
+  }
