--- a/styles/SettingsPanel.module.css
+++ b/styles/SettingsPanel.module.css
@@ -11,7 +11,14 @@
   justify-content: space-between;
   align-items: center;
   font-size: 16px;
+  margin-bottom: 10px;
 }
+
+
+.settingItem:last-child {
+  margin-bottom: 0;
+}
+
 
 .switch {
   position: relative;
@@ -49,6 +56,7 @@
   transition: .4s;
   border-radius: 50%;
 }
+
 
 input:checked + .slider {
   background-color: #007aff;
