--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -51,6 +51,50 @@
   background-color: #0056b3;
 }
 
+
+.sequenceGenerator {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 15px;
+}
+
+.sequenceInput {
+  width: 60%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.generateButton {
+  width: 35%;
+  padding: 10px;
+  font-size: 16px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.generateButton:hover {
+  background-color: #45a049;
+}
+
+.darkMode .sequenceInput {
+background-color: #2c2c2e;
+color: #ffffff;
+border-color: #444;
+}
+.darkMode .generateButton {
+background-color: #0a84ff;
+}
+.darkMode .generateButton:hover {
+background-color: #007aff;
+}
+
+
+
 @media (max-width: 768px) {
   .form {
     width: 80%;
@@ -67,4 +111,15 @@
   .button {
     width: 100%;
   }
+
+  .sequenceGenerator {
+    flex-direction: column;
+  }
+
+  .sequenceInput,
+  .generateButton {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  
 }
