--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -94,6 +94,14 @@ background-color: #007aff;
 }
 
 
+.dark-mode input,
+.dark-mode textarea,
+.dark-mode select {
+  background-color: #2c2c2e;
+  color: #ffffff;
+  border-color: #3a3a3c;
+}
+
 
 @media (max-width: 768px) {
   .form {
@@ -121,5 +129,5 @@ background-color: #007aff;
     width: 100%;
     margin-bottom: 10px;
   }
-  
+
 }
