--- a/styles/SettingsPanel.module.css
+++ b/styles/SettingsPanel.module.css
@@ -21,7 +21,7 @@
 
 /* 旋轉時間(文字) */
 .settingItem > span:first-child {
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 /* 秒數(文字) */
@@ -33,12 +33,13 @@
 /* 控制時間的橫桿(介面) */
 .spinDurationControl {
   width: 100%;
-  margin-top: 5px;
+  margin-top: 10px;
+  position: relative;
 }
 
 .spinDurationControl input[type="range"] {
   width: 100%;
-  margin-right: 0;
+  margin: 0;
   -webkit-appearance: none;
   background: transparent;
 }
@@ -60,6 +61,7 @@
   background: #ddd;
   border-radius: 2px;
 }
+
 
 /* Firefox 的滑動條樣式 */
 .spinDurationControl input[type="range"]::-moz-range-thumb {
