--- a/styles/SettingsPanel.module.css
+++ b/styles/SettingsPanel.module.css
@@ -35,6 +35,7 @@
   width: 100%;
   margin-top: 10px;
   position: relative;
+  z-index: 3;
 }
 
 .spinDurationControl input[type="range"] {
@@ -85,6 +86,7 @@
   display: inline-block;
   width: 50px;
   height: 28px;
+  z-index: 1; /* 確保開關在上層 */
 }
 
 .switch input {
@@ -115,6 +117,7 @@
   background-color: white;
   transition: .4s;
   border-radius: 50%;
+  z-index: 2; /* 確保圓點在最上層 */
 }
 
 input:checked + .slider {
