--- a/styles/SettingsPanel.module.css
+++ b/styles/SettingsPanel.module.css
@@ -43,6 +43,7 @@
   margin: 0;
   -webkit-appearance: none;
   background: transparent;
+  z-index: 3;
 }
 
 /* 自定義滑動條樣式 */
@@ -54,6 +55,7 @@
   background: #007aff;
   cursor: pointer;
   margin-top: -6px;
+  z-index: 3;
 }
 
 .spinDurationControl input[type="range"]::-webkit-slider-runnable-track {
@@ -61,6 +63,7 @@
   height: 4px;
   background: #ddd;
   border-radius: 2px;
+  z-index: 3;
 }
 
 
@@ -71,6 +74,7 @@
   border-radius: 50%;
   background: #007aff;
   cursor: pointer;
+  z-index: 3;
 }
 
 .spinDurationControl input[type="range"]::-moz-range-track {
@@ -78,6 +82,7 @@
   height: 4px;
   background: #ddd;
   border-radius: 2px;
+  z-index: 3;
 }
 
 /* 開關樣式 */
@@ -117,7 +122,7 @@
   background-color: white;
   transition: .4s;
   border-radius: 50%;
-  z-index: 2; /* 確保圓點在最上層 */
+  z-index: 1; /* 確保圓點在最上層 */
 }
 
 input:checked + .slider {
