--- a/styles/SettingsPanel.module.css
+++ b/styles/SettingsPanel.module.css
@@ -66,6 +66,9 @@
   z-index: 3;
 }
 
+.spinDurationControl input[type="range"]:before {
+  display: none;
+}
 
 /* Firefox 的滑動條樣式 */
 .spinDurationControl input[type="range"]::-moz-range-thumb {
@@ -98,6 +101,7 @@
   opacity: 0;
   width: 0;
   height: 0;
+  z-index: 1; /* 確保開關在上層 */
 }
 
 .slider {
@@ -122,7 +126,7 @@
   background-color: white;
   transition: .4s;
   border-radius: 50%;
-  z-index: 1; /* 確保圓點在最上層 */
+  z-index: 1; 
 }
 
 input:checked + .slider {
